--- a/public/front-end/pages/landing.html
+++ b/public/front-end/pages/landing.html
@@ -3,7 +3,8 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Banco Lalito - Landing Page</title>
+  <link rel="icon" href="../images/favicon.ico" type="image/x-icon">
+  <title>Banco Lalito 🍂 Landing Page</title>
   <link rel="stylesheet" href="../styles/style.css">
   <style>
     /* Basic styling for the splash screen */
@@ -28,17 +29,16 @@
   </style>
 </head>
 <body>
-  <img id="logo" src="../images/bank-logo.png" alt="Banco Lalito Logo">
-  
+  <img id="logo" src="images/bank-logo.png" alt="Banco Lalito Logo">
   <script>
-    // Wait for 5 seconds, then blur and redirect to the login page
+    // Wait for 1 seconds, then blur and redirect to the login page
     setTimeout(() => {
       const logo = document.getElementById('logo');
       logo.classList.add('blur');
       setTimeout(() => {
-        window.location.href = '../pages/login.html';
+        window.location.href = 'pages/login.html';
       }, 1000);  // Wait for the blur effect to finish
-    }, 15000);
+    }, 1000);
   </script>
 </body>
 </html>
