mail sending done

--- a/public/front-end/pages/main.html
+++ b/public/front-end/pages/main.html
@@ -26,7 +26,7 @@
           <div class="button-group">
             <button id="pendientes-btn" class="button"><img src="../images/tasks-icon.png" alt="Pendientes"> Pendientes</button>
             <button id="estadisticas-btn" class="button"><img src="../images/stats-icon.png" alt="Estadísticas"> Estadísticas</button>
-            <button id="mandar-correos-btn" class="button"><img src="../images/mail-icon.png" alt="Mandar Correos"> Mandar Correos</button>
+            <button id="mandar-correos-btn" class="button"><img src="../images/mail-icon.png" alt="Mandar Correos"> Enviar</button>
             <button id="process-xlsx-btn" class="button"><img src="../images/xlsx-icon.png" alt="Process XLSX">Procesar 💳.xlsx</button>
           </div>
           <div class="button-group" style="align-items: center;">
