--- a/public/front-end/pages/main.html
+++ b/public/front-end/pages/main.html
@@ -27,18 +27,18 @@
             <button id="pendientes-btn" class="button"><img src="../images/tasks-icon.png" alt="Pendientes"> Pendientes</button>
             <button id="estadisticas-btn" class="button"><img src="../images/stats-icon.png" alt="Estadísticas"> Estadísticas</button>
             <button id="mandar-correos-btn" class="button"><img src="../images/mail-icon.png" alt="Mandar Correos"> Enviar</button>
-            <button id="process-xlsx-btn" class="button"><img src="../images/xlsx-icon.png" alt="Process XLSX">Procesar 💳.xlsx</button>
+            <button id="process-xlsx-btn" class="button" disabled><img src="../images/xlsx-icon.png" alt="Process XLSX">Procesar 💳.xlsx</button>
           </div>
           <div class="button-group" style="align-items: center;">
             <input type="text" id="todoist-input" placeholder="πpol todoist identifier" class="input">
             <input type="text" id="days-input" placeholder="days to process" class="input" value="90">
           </div>
-          <div id="drag-drop-area" class="drag-drop" >Drag & Drop your .xlsx file here</div>
+          <div id="drag-drop-area" class="drag-drop-area" >Drag & Drop your .xlsx file here</div>
         </div>
       <div class="section">
         <h2 class="title">Experimental .Ø_Ø.</h2>
         <div class="button-group">
-            <button class="button" onclick="alert('Web Playback SDK will be implemented soon... dont bother me now.')">
+            <button class="button" onclick="alert('Web Playback SDK will be implemented soon... dont bother me now.')" disabled>
               <img src="../images/spotify-logo.png" alt="Spotify">Spotify</button>
             <button class="button" id="notion-btn" disabled><img src="../images/notion-logo.png" alt="Notion">Notion</button>
             <button class="button" id="todoist-btn" disabled><img src="../images/todoist-logo.png" alt="Todoist">Todoist</button>
