--- a/public/front-end/pages/main.html
+++ b/public/front-end/pages/main.html
@@ -6,14 +6,19 @@
   <link rel="icon" href="../images/favicon.ico" type="image/x-icon">
   <title>Banco Lalito 🍂 Dashboard</title>
   <link rel="stylesheet" href="../styles/style.css">
+
 </head>
 <body>
   <!-- Top banner for status messages -->
   <div class="banner" id="response_banner">Status messages will appear here</div>
   <div class="user-info">
     <img src="../images/bank-logo.png" alt="Bank Logo" style="margin: 0px 10px;max-width: 20px;max-height: 20px;">
-    <span>John Doe</span>
-    <img src="../images/user-icon.png" alt="User" style="border-radius: 40%; margin: 0px 10px;max-width: 20px;max-height: 20px;">
+    <div id="user-name"><span>John Doe</span></div>  
+    <div class="flip-container" id="user-icon-container" style="cursor: pointer;">
+      <div class="flipper">
+          <img src="../images/user-icon.png" alt="User" id="user-icon" style="border-radius: 40%; margin: 0px 10px;max-width: 20px;max-height: 20px;">
+      </div>
+    </div>
   </div>
   <!-- Financial dashboard -->
   <div class="content">
@@ -49,7 +54,16 @@
   </div> 
   <!-- Footer with current date, author, and version -->
   <footer class="footer"></footer> <!-- The date will be injected dynamically by JavaScript -->
-  <!-- include main.js -->
-  <script src="main.js"></script>
+  <div id="user-icon2" style="cursor: pointer;">
+    <i class="fas fa-user-circle" style="font-size: 24px;"></i> 
+  </div>
+
+<script>
+    document.getElementById('user-icon').onclick = function() {
+        // Redirect to logout route
+        window.location.href = '/auth/logout';
+    };
+</script>
+<script src="main.js"></script>
 </body>
 </html>
