--- a/public/front-end/pages/main.html
+++ b/public/front-end/pages/main.html
@@ -13,7 +13,7 @@
   <div class="banner" id="response_banner">Status messages will appear here</div>
   <div class="user-info">
     <img src="../images/bank-logo.png" alt="Bank Logo" style="margin: 0px 10px;max-width: 20px;max-height: 20px;">
-    <div id="user-name"><span>John Doe</span></div>  
+    <div id="user-name"><span></span></div>  
     <div class="flip-container" id="user-icon-container" style="cursor: pointer;">
       <div class="flipper">
           <img src="../images/user-icon.png" alt="User" id="user-icon" style="border-radius: 40%; margin: 0px 10px;max-width: 20px;max-height: 20px;">
