--- a/public/front-end/pages/landing.html
+++ b/public/front-end/pages/landing.html
@@ -29,7 +29,7 @@
   </style>
 </head>
 <body>
-  <img id="logo" src="images/bank-logo.png" alt="Banco Lalito Logo">
+  <img id="logo" src="images/bank-logo.png" alt="Banco Lalito Logo" style="max-width: 300px; margin: 0 auto;border-radius: 50%;">
   <script>
     // Wait for 1 seconds, then blur and redirect to the login page
     setTimeout(() => {
