--- a/public/front-end/pages/main.html
+++ b/public/front-end/pages/main.html
@@ -12,7 +12,7 @@
   <!-- Top banner for status messages -->
   <div class="banner" id="response_banner">Status messages will appear here</div>
   <div class="user-info">
-    <img src="../images/bank-logo.png" alt="Bank Logo" style="margin: 0px 10px;max-width: 20px;max-height: 20px;">
+    <div><img src="../images/bank-logo.png" alt="Bank Logo" style="border-radius: 50%; margin: 0px 10px;max-width: 20px;max-height: 20px;"></div>
     <div id="user-name"><span></span></div>  
     <div class="flip-container" id="user-icon-container" style="cursor: pointer;">
       <div class="flipper">
