--- a/public/front-end/pages/main.html
+++ b/public/front-end/pages/main.html
@@ -23,35 +23,42 @@
   <!-- Financial dashboard -->
   <div class="content">
       <div class="section">
-          <h2 class="title">Financial Dashboard </h2>
-          <div class="dashboard" >
-              <canvas id="financial-dashboard" width="100%" ></canvas>
-          </div>
+      <h2 class="title collapsible">Financial Dashboard</h2>
+      <div class="contentCollapsible">
+        <div class="dashboard">
+            <canvas id="financial-dashboard" width="100%"></canvas>
+        </div>
           <!-- Main container for buttons -->
-          <div class="button-group">
+        <div class="button-group">
             <button id="pendientes-btn" class="button"><img src="../images/tasks-icon.png" alt="Pendientes"> Pendientes</button>
             <button id="estadisticas-btn" class="button"><img src="../images/stats-icon.png" alt="Estadísticas"> Estadísticas</button>
             <button id="mandar-correos-btn" class="button"><img src="../images/mail-icon.png" alt="Mandar Correos"> Enviar</button>
             <button id="process-xlsx-btn" class="button" disabled><img src="../images/xlsx-icon.png" alt="Process XLSX">Procesar 💳.xlsx</button>
-          </div>
-          <div class="button-group" style="align-items: center;">
+        </div>
+        <div class="button-group" style="align-items: center;">
             <input type="text" id="todoist-input" placeholder="πpol todoist identifier" class="input">
             <input type="text" id="days-input" placeholder="days to process" class="input" value="90">
-          </div>
-          <div id="drag-drop-area" class="drag-drop-area" >Drag & Drop your .xlsx file here</div>
         </div>
+        <div id="drag-drop-area" class="drag-drop-area">Drag & Drop your .xlsx file here</div>
+      </div>
+      </div>
+    </div>
+    <div class="content">
       <div class="section">
-        <h2 class="title">Experimental .Ø_Ø.</h2>
-        <div class="button-group">
-            <button class="button" onclick="alert('Web Playback SDK will be implemented soon... dont bother me now.')" disabled>
-              <img src="../images/spotify-logo.png" alt="Spotify">Spotify</button>
-            <button class="button" id="notion-btn" disabled><img src="../images/notion-logo.png" alt="Notion">Notion</button>
-            <button class="button" id="todoist-btn" disabled><img src="../images/todoist-logo.png" alt="Todoist">Todoist</button>
-            <button class="button" id="python-btn" disabled><img src="../images/python-logo.png" alt="Python Scripts">Python Scripts</button>
-            <button class="button" id="mongodb-btn" disabled><img src="../images/mongodb-logo.png" alt="MongoDB">MongoDB</button>
+            <h2 class="title collapsible">Experimental .Ø_Ø.</h2>
+            <div class="contentCollapsible">
+            <div class="button-group">
+                <button class="button" onclick="alert('Web Playback SDK will be implemented soon... dont bother me now.')" disabled>
+                    <img src="../images/spotify-logo.png" alt="Spotify">Spotify</button>
+                <button class="button" id="notion-btn" disabled><img src="../images/notion-logo.png" alt="Notion">Notion</button>
+                <button class="button" id="todoist-btn" disabled><img src="../images/todoist-logo.png" alt="Todoist">Todoist</button>
+                <button class="button" id="python-btn" disabled><img src="../images/python-logo.png" alt="Python Scripts">Python Scripts</button>
+                <button class="button" id="mongodb-btn" disabled><img src="../images/mongodb-logo.png" alt="MongoDB">MongoDB</button>
+            </div>
         </div>
       </div>
-  </div> 
+    </div>
+</div> 
   <!-- Footer with current date, author, and version -->
   <footer class="footer"></footer> <!-- The date will be injected dynamically by JavaScript -->
   <div id="user-icon2" style="cursor: pointer;">
@@ -59,10 +66,18 @@
   </div>
 
 <script>
-    document.getElementById('user-icon').onclick = function() {
+    document.getElementById('user-icon-container').onclick = function() {
         // Redirect to logout route
         window.location.href = '/auth/logout';
     };
+    // Add event listeners for collapsible sections
+    const collapsibles = document.querySelectorAll('.collapsible');
+    collapsibles.forEach(collapsible => {
+        collapsible.addEventListener('click', function() {
+            const content = this.nextElementSibling;
+            content.classList.toggle('show');
+        });
+    });    
 </script>
 <script src="main.js"></script>
 </body>
