--- a/public/front-end/pages/main.html
+++ b/public/front-end/pages/main.html
@@ -24,7 +24,7 @@
   <div class="content">
       <div class="section">
       <h2 class="title collapsible">Financial Dashboard</h2>
-      <div class="contentCollapsible">
+      <div class="contentCollapsible" id="financial-dashboard-container">
         <div class="dashboard">
             <canvas id="financial-dashboard" width="100%"></canvas>
         </div>
