notion and todoist health check

--- a/public/front-end/pages/login.html
+++ b/public/front-end/pages/login.html
@@ -8,7 +8,7 @@
   <link rel="stylesheet" href="../styles/style.css">
 </head>
 <body>
-  <div class="content">
+  <div class="content" style="margin-top: 300px;">
     <div class="section">
     <button id="login-btn" onclick="window.location.href='/auth/google';" class="button" style="margin: 0 auto;">
     Login with Google &nbsp;<img src="../images/google-logo.png" alt="Google Login" style="max-width: 20px; margin-left: 10px;"></button>
