--- a/public/front-end/pages/main.html
+++ b/public/front-end/pages/main.html
@@ -45,8 +45,8 @@
     </div>
     <div class="content">
       <div class="section">
-            <h2 class="title collapsible">Experimental .Ø_Ø.</h2>
-            <div class="contentCollapsible">
+            <h2 class="title collapsible" id="experimental-title">Show Experimental .Ø_Ø.</h2>
+            <div class="contentCollapsible" id="experimental-container" style="display: none;">
             <div class="button-group">
                 <button class="button" onclick="alert('Web Playback SDK will be implemented soon... dont bother me now.')" disabled>
                     <img src="../images/spotify-logo.png" alt="Spotify">Spotify</button>
