feat: display Pending todoist Tasks

--- a/public/front-end/pages/main.html
+++ b/public/front-end/pages/main.html
@@ -6,7 +6,6 @@
   <link rel="icon" href="../images/favicon.ico" type="image/x-icon">
   <title>Banco Lalito 🍂 Dashboard</title>
   <link rel="stylesheet" href="../styles/style.css">
-
 </head>
 <body>
   <!-- Top banner for status messages -->
@@ -80,5 +79,6 @@
     });    
 </script>
 <script src="main.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/marked/marked.min.js"></script>
 </body>
 </html>
