feat: karma button first draft
no functionality/animation yet

--- a/public/front-end/pages/main.html
+++ b/public/front-end/pages/main.html
@@ -78,7 +78,8 @@
         });
     });    
 </script>
-<script src="main.js"></script>
-<script src="https://cdn.jsdelivr.net/npm/marked/marked.min.js"></script>
+<script src="main.js"></script> <!-- Main functions -->
+<script src="https://cdn.jsdelivr.net/npm/marked/marked.min.js"></script> <!-- Markdown parser -->
+<script src="utils.js"></script> <!-- Utils functions -->
 </body>
 </html>
