--- a/public/front-end/pages/main.html
+++ b/public/front-end/pages/main.html
@@ -50,7 +50,7 @@
                 <button class="button" onclick="alert('Web Playback SDK will be implemented soon... dont bother me now.')" disabled>
                     <img src="../images/spotify-logo.png" alt="Spotify">Spotify</button>
                 <button class="button" id="notion-btn" disabled><img src="../images/notion-logo.png" alt="Notion">Notion</button>
-                <button class="button" id="todoist-btn" disabled><img src="../images/todoist-logo.png" alt="Todoist">Todoist</button>
+                <button class="button" id="todoist-btn" ><img src="../images/todoist-logo.png" alt="Todoist">Todoist</button>
                 <button class="button" id="python-btn" disabled><img src="../images/python-logo.png" alt="Python Scripts">Python Scripts</button>
                 <button class="button" id="mongodb-btn" disabled><img src="../images/mongodb-logo.png" alt="MongoDB">MongoDB</button>
             </div>
