--- a/public/front-end/pages/main.html
+++ b/public/front-end/pages/main.html
@@ -40,10 +40,7 @@
       <div class="section">
       <h2 class="title collapsible">Financial Dashboard</h2>
       <div class="contentCollapsible" id="financial-dashboard-container">
-        <div class="dashboard">
-            <canvas id="financial-dashboard" width="100%"></canvas>
-        </div>
-          <!-- Main container for buttons -->
+        <!-- Main container for buttons -->
         <div class="button-group">
             <button id="pendientes-btn" class="button"><img src="../images/tasks-icon.png" alt="Pendientes"> Pendientes</button>
             <button id="estadisticas-btn" class="button"><img src="../images/stats-icon.png" alt="Estadísticas"> Estadísticas</button>
@@ -55,7 +52,11 @@
             <input type="text" id="days-input" placeholder="days to process" class="input" value="90">
         </div>
         <div id="drag-drop-area" class="drag-drop-area">Drag & Drop your .xlsx file here</div>
-      </div>
+        <div class="dashboard">
+          <canvas id="financial-dashboard" width="100%" hidden></canvas>
+          <div class="task-grid" id="task-grid"></div>
+        </div>
+    </div>
       </div>
     </div>
     <div class="content">
