ENHANCEMENT: Select HTML for πpol mail
- [x]  **FEATURE:** Show the pending to process mvmnts in the main page.
- [x]  **ENHANCEMENT:** Select for πpol mail
- [ ]  **FIX:** Hotmail *ichu*

--- a/public/front-end/pages/main.html
+++ b/public/front-end/pages/main.html
@@ -44,11 +44,14 @@
         <div class="button-group">
             <button id="pendientes-btn" class="button"><img src="../images/tasks-icon.png" alt="Pendientes"> Pendientes</button>
             <button id="estadisticas-btn" class="button"><img src="../images/stats-icon.png" alt="Estadísticas"> Estadísticas</button>
-            <button id="mandar-correos-btn" class="button"><img src="../images/mail-icon.png" alt="Mandar Correos"> Enviar</button>
+            <button id="mandar-correos-btn" class="button" disabled><img src="../images/mail-icon.png" alt="Mandar Correos"> Enviar</button>
             <button id="process-xlsx-btn" class="button" disabled><img src="../images/xlsx-icon.png" alt="Process XLSX">Procesar 💳.xlsx</button>
         </div>
         <div class="button-group" style="align-items: center;">
-            <input type="text" id="todoist-input" placeholder="πpol todoist identifier" class="input">
+            <input type="text" id="todoist-input" placeholder="πpol todoist identifier" class="input" hidden>
+            <select id="todoist-select" class="input" disabled>
+              <option value="">Loading...</option> <!-- Placeholder option -->
+            </select>
             <input type="text" id="days-input" placeholder="days to process" class="input" value="90">
         </div>
         <div id="drag-drop-area" class="drag-drop-area">Drag & Drop your .xlsx file here</div>
