Redis health checks

--- a/public/front-end/pages/main.html
+++ b/public/front-end/pages/main.html
@@ -69,6 +69,7 @@
         <div class="contentCollapsible" id="experimental-container" style="display: none;">
           <div class="button-group">
             <button class="button" id="todoist-btn" ><img src="../images/todoist-logo.png" alt="Todoist">Todoist</button>
+            <button class="button" id="tradingview-btn" ><img src="../images/tradingview-logo.png" alt="Trading View">Trading View</button>
           </div>
         </div>
       </div>
