Open html in new tab
separated tv.js

--- a/public/front-end/pages/main.html
+++ b/public/front-end/pages/main.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="Content-Security-Policy" content="script-src 'self' 'unsafe-inline' https://s3.tradingview.com https://cdn.jsdelivr.net https://www.tradingview.com;">
     <link rel="icon" href="../images/favicon.ico" type="image/x-icon">
     <title>Banc Lalito 🍂 Tauler de Control</title>
     <link rel="stylesheet" href="../styles/style.css">
@@ -94,6 +95,7 @@
           });
       });    
     </script>
+    <script src="tradingview.js"></script> <!-- TradingView functions -->
     <script src="main.js"></script> <!-- Main functions -->
     <script src="https://cdn.jsdelivr.net/npm/marked/marked.min.js"></script> <!-- Markdown parser -->
     <script src="utils.js"></script> <!-- Utils functions -->
